--- a/src/components/SequenceMemoryTest/SequenceMemoryTest.css
+++ b/src/components/SequenceMemoryTest/SequenceMemoryTest.css
@@ -3,8 +3,20 @@
     animation-name: slideFadeIn;
     animation-duration: 0.5s;
     animation-timing-function: ease-out;
-    
+   
+         
  }   
+ .animate{
+   animation:animation1sios 0.1s linear 0s 1 normal none running ;
+}
+@keyframes animation1sios {
+ 
+
+   100% {border:15px solid #068fff;
+   
+   }
+}
+
  .SeqSec{
     background: rgb(43, 135, 209);
     position: relative;
@@ -20,7 +32,10 @@
     margin: 0px 15px;
  }
  .Cubename{
+   border:15px solid transparent;
+   border-radius: 10px; 
     margin: 30px 0px 0px;
+    max-width: 370px;
  }
  .SeqSec span{
     font-size: 28px;
