--- a/src/components/SequenceMemoryTest/SequenceMemoryTest.css
+++ b/src/components/SequenceMemoryTest/SequenceMemoryTest.css
@@ -12,7 +12,7 @@
 @keyframes animation1sios {
  
 
-   100% {border:15px solid #068fff;
+   100% {border:20px solid #068fff;
    
    }
 }
@@ -25,18 +25,17 @@
     user-select: none;
     overflow: hidden;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-size: 28px;
 
  }
  .SecLevel{
-    margin: 0px 15px;
+    margin: 20px 0px 0px  0px;
  }
- .Cubename{
-   border:15px solid transparent;
-   border-radius: 10px; 
-    margin: 30px 0px 0px;
-    max-width: 370px;
- }
+
  .SeqSec span{
     font-size: 28px;
 
